--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
                 <hr width="80%"> <!-- the visible horizontal line will cover 80% of the screen -->
                 <!-- copyright -->
                 <div class="footer-copyright text-center py-3">
-                    <strong>© Copyright: iXpert Technologies</strong>
+                    © Copyright: iXpert Technologies
                 </div>
             </footer>
         </div>
