--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
 <head>
    <div th:fragment="header-css">
        <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.3.0/css/bootstrap.min.css}">
-       <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}">
+       <link rel="stylesheet" type="text/css" th:href="@{/webjars/font-awesome/5.10.1/css/font-awesome.min.css}">
        <link rel="stylesheet" type="text/css" th:href="@{test1.css}" >
        <script type="text/javascript" th:src="@{/webjars/jquery/3.4.0/dist/jquery.min.js}"></script>
        <script type="text/javascript" th:src="@{/webjars/popper.js/1.14.3/umd/popper.min.js}"></script>
@@ -12,18 +12,11 @@
 </head>
 <body>
     <div th:fragment="header">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
+        <!--nav class="navbar navbar-expand-sm bg-dark navbar-dark" -->
+        <nav class="navbar navbar-dark bg-dark" role="navigation">
             <!-- brand -->
-            <a class="navbar-brand" href="#">iXpert Technologies ©</a>
-            <a class="navbar-brand" href="#">  iRegister </a>
-            <!-- links -->
-            <!--
-            <ul class="navbar-nav" >
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{home}" ><i class="fa fa-home" title="home" > Home</i> </a>
-                </li>
-            </ul>
-            -->
+            <a class="navbar-brand" href="#"> © iRegister </a>
+            <a href="#" class="btn btn-light -pull-right"> <span class="fas fa-sign-in-alt"></span> Login </a>
         </nav>
     </div>
 </body>
