--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,8 @@
     <div th:fragment="footer">
         <div class="container">
             <footer class="footer">
-                <hr width="80%"> <!-- the visible horizontal line will cover 80% of the screen -->
+
+                <hr> <!-- the visible horizontal line will cover 80% of the screen -->
                 <!-- copyright -->
                 <div class="footer-copyright text-center py-3">
                     © Copyright: iXpert Technologies
