--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,23 +13,22 @@
 </head>
 <body>
     <div th:fragment="header">
-        <!--nav class="navbar navbar-expand-sm bg-dark navbar-dark" -->
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">WebSiteName</a>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">iRegister</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+
+                        <li><a class="active" href="#">Home</a></li>
+
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span>Register</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
-                </ul>
-            </div>
+            <!--/nav-->
         </nav>
 
     </div>
