--- a/src/main/resources/templates/successLogin.html
+++ b/src/main/resources/templates/successLogin.html
@@ -8,12 +8,12 @@
     <div th:replace="fragments/header :: header" />
 
     <div class="container">
-        <h2>Main landing page</h2>
+        <h2>Success Login!</h2>
     </div>
 
-    </div>
+</div>
 
-    <div th:replace="fragments/footer :: footer"/>
+<div th:replace="fragments/footer :: footer"/>
 
 </body>
 </html>
